[tool.poetry]
name = "biocraft"
version = "0.0.1"
description = "Life science and biophysics with Biocraft."
authors = ["Minsoo Kim <vv137.xyz@gmail.com>"]
repository = "https://github.com/vv137/biocraft"
readme = "README.md"
packages = [{ include = "biocraft" }]


[tool.poetry.dependencies]
python = ">=3.10"
numpy = "^2.2.1"
matplotlib = "^3.10.0"
pandas = "^2.2.3"
scipy = "^1.14.1"
tqdm = "^4.67.1"
pydantic = "^2.10.4"
torch = "^2.5.1"
torchvision = "^0.20.1"
torchaudio = "^2.5.1"
jaxtyping = "^0.2.36"
biotite = "^1.0.1"
rdkit = "^2024.3.6"
biopython = "^1.84"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"
ruff = "^0.8.4"


[tool.poetry.scripts]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
target-version = "py310"
line-length = 120
indent-width = 4


[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = 120


[tool.ruff.lint.pydocstyle]
convention = "numpy"


[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = [
    "F401", # Imported but unused
]
